# Arb-Sport

./: README.md
Arbitrage Sports/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Arbitrage Sports/data/: app.db
Arbitrage Sports/scripts/: print_kalshi_sample.py
Arbitrage Sports/src/arb/: __init__.py  config.py  main.py
Arbitrage Sports/src/arb/alerts/: __init__.py  console.py  discord.py
Arbitrage Sports/src/arb/clients/: __init__.py  kalshi.py  sportsbook.py
Arbitrage Sports/src/arb/core/: __init__.py  matching.py  odds.py  pricing.py
Arbitrage Sports/src/arb/models/: __init__.py  market.py  odds.py  opportunity.py
Arbitrage Sports/src/arb/services/: __init__.py  scanner.py  storage.py
Arbitrage Sports/tests/: test_alerts.py  test_clients.py  test_main.py  test_matching.py  test_odds.py  test_pricing.py  test_storage.py
Arbitrage Sports/tests/fixtures/: kalshi_events_sample.json  kalshi_orderbook_sample.json  sportsbook_odds_sample.json
